--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.85.4",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
   }
