--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GITHUB_TOKEN=
+OPENAI_API_KEY=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
+PORT=3001
