--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "openai": "^4.90.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.21"
