Working LexSearch | Future design needed

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 OPENAI_API_KEY=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
 PORT=3001
+OPENCAGE_API_KEY=867d59c1561946fc9b7aa0c10fe77832
