--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,11 +25,13 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.12",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "openai": "^4.90.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
