--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,10 +24,12 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.0.12",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "mysql2": "^3.14.0",
     "openai": "^4.90.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
