--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,8 @@
     "@nestjs/websockets": "^11.0.12",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mysql2": "^3.14.0",
     "openai": "^4.90.0",
     "reflect-metadata": "^0.2.2",
@@ -48,14 +50,17 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
+    "tailwindcss": "^4.0.17",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
